--- a/templates/Accounts/manageplaylist.html
+++ b/templates/Accounts/manageplaylist.html
@@ -14,10 +14,10 @@
         <a href="/accounts/editplaylist/{{p.id}}">
             <ons-list-item>
                 <div class="left">
-                    <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
+                    <img class="list-item__thumbnail" src="{% static 'Images/pngegg.png' %}">
                 </div>
                 <div class="center">
-                    <span class="list-item__title">{{p.name}}</span><span class="list-item__subtitle">id</span>
+                    <span class="list-item__title">{{p.name}}</span><span class="list-item__subtitle"></span>
                 </div>
             </ons-list-item>
         </a>
