--- a/templates/UserApp/albumsongs.html
+++ b/templates/UserApp/albumsongs.html
@@ -19,7 +19,7 @@
             <a href="/playsong/{{s.id}}">
                 <ons-list-item>
                     <div class="left">
-                        <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
+                        <img class="list-item__thumbnail" src="{% static 'Images/tracks.jpg' %}">
                     </div>
                     <div class="center">
                         <span class="list-item__title">{{s.name}}</span><span class="list-item__subtitle">{{s.artist}}</span>
