--- a/templates/UserApp/favourites.html
+++ b/templates/UserApp/favourites.html
@@ -15,7 +15,7 @@
             <a href="/playfavsong/{{s.song.id}}">
                 <ons-list-item>
                     <div class="left">
-                        <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
+                        <img class="list-item__thumbnail" src="{% static 'Images/tracks.jpg' %}">
                     </div>
                     <div class="center">
                         <span class="list-item__title">{{s.song.name}}</span><span class="list-item__subtitle">{{s.song.artist}}</span>
