--- a/templates/UserApp/home.html
+++ b/templates/UserApp/home.html
@@ -9,44 +9,31 @@
     <ons-toolbar>
       <div class="center"><i class="fas fa-music"></i> V Music Player</div>
     </ons-toolbar>
+    <form class="d-flex" action="/searched_tracks">
+        <input type="search" placeholder="Search" class="search-input search-input" name="sq" style="width: 100%; margin-top: 5px;">
+        
+    </form>
+    <p style="text-align: center; margin-top: 10px;">
+        
+    </p>
     <ons-list>
         <ons-list-header>Albums</ons-list-header>
         {% for a in albums %}
         <a href="/albumsongs/{{a.id}}">
         <ons-list-item>
             <div class="left">
-                <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
+                <img class="list-item__thumbnail" src="{% static 'Images/album.jpg' %}">
             </div>
             <div class="center">
                 <span class="list-item__title">{{a.name}}</span>
-                
-                <span class="list-item__subtitle">{{a.count}}</span>
+                <span class="list-item__subtitle"></span>
             </div>
         </ons-list-item>
         </a>
         {% endfor %}
-        <a href="#">
-          <ons-list-item>
-              <div class="left">
-                  <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
-              </div>
-              <div class="center">
-                  <span class="list-item__title">Sample name</span><span class="list-item__subtitle">id</span>
-              </div>
-          </ons-list-item>
-        </a>
-        <a href="#">
-          <ons-list-item>
-              <div class="left">
-                  <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
-              </div>
-              <div class="center">
-                  <span class="list-item__title">Sample name</span><span class="list-item__subtitle">id</span>
-              </div>
-          </ons-list-item>
-        </a>
     </ons-list>
     <ons-list>
+    {% if "uname" in request.session %}
         <ons-list-header>Favourites</ons-list-header>
         <a href="/accounts/addtofavourite">
             <ons-list-item>
@@ -54,28 +41,26 @@
                     <img class="list-item__thumbnail" src="https://www.freepnglogos.com/uploads/heart-png/emoji-heart-33.png">
                 </div>
                 <div class="center">
-                    <span class="list-item__title">Favourite Songs</span><span class="list-item__subtitle">id</span>
+                    <span class="list-item__title">Favourite's</span><span class="list-item__subtitle"></span>
                 </div>
             </ons-list-item>
         </a>
-    </ons-list>
-    <ons-list>
-    {% if "uname" in request.session %}
         <ons-list-header>Playlist</ons-list-header>
         {% for p in playlist %}
-        <a href="/playlist/{{a.id}}">
+        <a href="/accounts/playlist/{{p.id}}">
             <ons-list-item>
                 <div class="left">
-                    <img class="list-item__thumbnail" src="http://placekitten.com/g/40/40">
+                    <img class="list-item__thumbnail" src="{% static 'Images/pngegg.png' %}">
                 </div>
                 <div class="center">
                     <span class="list-item__title">{{p.name}}</span>
-                
-                    <span class="list-item__subtitle">{{p.id}}</span>
+                    
+                    <span class="list-item__subtitle"></span>
                 </div>
             </ons-list-item>
         </a>
         {% endfor %}
+        
         <a href="/accounts/manageplaylist">
             <ons-button modifier="large--quiet">Manage Playlist's</ons-button>
         </a>
