--- a/templates/UserApp/playsong.html
+++ b/templates/UserApp/playsong.html
@@ -32,13 +32,28 @@
                 {{song.name}}
             </div>
             <div class="content">
-                <div class="centre">
-                    <ons-button class="button" style="margin: 20px 10px 20px 10px;" name="sid" value="{{song.id}}" modifier="outline"><i class="fas fa-heart"></i></ons-button>
-                    <ons-button style="margin: 20px 10px 20px 10px;" modifier="outline" name="play" onclick="play_aud()" id="play_button"><i class="fas fa-play"></i></ons-button>
-                    <ons-button style="margin: 20px 10px 20px 10px;" modifier="outline" name="pause" onclick="pause_aud()" id="pause_button"><i class="fas fa-pause"></i></ons-button>
-                    <ons-button style="margin: 20px 10px 20px 10px;" modifier="outline" onclick="stop_aud()" id="stop_button"><i class="fas fa-stop"></i></ons-button>
-
+                <div class="center">
+                    <a href="/playsong/{{prev_song.id}}">
+                        <button class="button button--quiet" href="#" style="margin: 20px 10px 20px 10px;" id="next"><i class="fas fa-step-backward"></i></button>
+                    </a>
+                    <button class="button button--quiet" style="margin: 20px 10px 20px 10px;" name="play" onclick="play_aud()" id="play_button"><i class="fas fa-play"></i></button>
+                    <button class="button button--quiet" style="margin: 20px 10px 20px 10px;" name="pause" onclick="pause_aud()" id="pause_button"><i class="fas fa-pause"></i></button>
+                    <button class="button button--quiet" style="margin: 20px 10px 20px 10px;" onclick="stop_aud()" id="stop_button"><i class="fas fa-stop"></i></button>
+                    <a href="/playsong/{{next_song.id}}">
+                        <button class="button button--quiet" style="margin: 20px 10px 20px 10px;" id="next"><i class="fas fa-step-forward"></i></button>
+                    </a>
                 </div>
+                <ons-row class="center">
+                    <form name="add_to_fav" method="POST"> {% csrf_token %}
+                        <input type="hidden" name="sid" value="{{song.id}}">
+                        {% if "True" in flag %}
+                        <button class="button button--quiet" id="remove" onclick="notify()"><i class="fas fa-heart" id="fav_button" style="color: red;"></i></button>
+                        {% else %}
+                        <button class="button button--quiet" id="add" onclick="notify()"><i class="fas fa-heart" id="fav_button"></i></button>
+                        {% endif %}
+
+                    </form>
+                </ons-row>
                 <div>
                     <ons-row style="margin: 15px 0px 15px 0px">
                         <ons-col width="30px" style="text-align: center; line-height: 31px;">
@@ -59,93 +74,10 @@
               </ons-list>
             </div>
         </ons-card>
-        <script type="text/javascript">
-            
-            $(document).ready(function (){
-                $("ons-button#play_button").hide();
-                $("ons-button#play_button").click(function (){
-                    $("ons-button#pause_button").show();
-                    $("ons-button#play_button").hide();
-                });
-                $("ons-button#pause_button").click(function (){
-                    $("ons-button#play_button").show();
-                    $("ons-button#pause_button").hide();
-                });
-                $("ons-button#stop_button").click(function (){
-                    $("ons-button#play_button").show();
-                    $("ons-button#pause_button").hide();
-                });
-            });
 
-            document.addEventListener("DOMContentLoaded", function() {
-            startplayer();
-            }, false);
+        <script src="{% static 'UserApp/play.js' %}"></script>
 
-            var player;
-            let position;
-            let seek;
-
-            function startplayer()
-            {
-                player = document.getElementById('music_player');
-                seekbar = document.getElementById("duration_slider");
-                player.controls = false;
-                player.volume=0.1
-                player.play();
-                player.addEventListener("timeupdate",(event) => {
-                    //console.log(event);
-                    let {currentTime, duration} = event.srcElement;
-                    //console.log(currentTime);
-                    //console.log(duration);
-                    let progress_time = (currentTime / duration) * 100;
-                    //console.log(progress_time);
-
-                    //console.log(player.currentTime,"live")
-
-                    //live time
-                    let min_progress = Math.floor(progress_time / 60);
-                    let sec_progress = Math.floor(progress_time % 60);
-                    let total_progress = `${min_progress}:${sec_progress}`;
-
-                    //total time or duration
-                    let min_duration = Math.floor(duration / 60);
-                    let sec_duration = Math.floor(duration % 60);
-                    let total_duration = `${min_duration}:${sec_duration}`;
-
-
-                    //console.log(Math.floor(progress_time),"aaaaaaaaaaaaaaaaa")
-                    document.getElementById("duration_slider").value=progress_time
-                    document.getElementById("start").innerHTML=total_progress
-                    document.getElementById("end").innerHTML=total_duration
-
-                    seekbar.addEventListener("click",(event) => {
-                        const { duration } = player
-                        let move_progress = (event.offsetX )
-                        //console.log(move_progress,"move_progress")
-                        player.currentTime = move_progress;
-                    });
-                });
-            }
-            function play_aud()
-            {
-                player.play();
-            } 
-            function pause_aud()
-            {
-                player.pause();
-            }
-            function stop_aud()
-            {
-                player.pause();
-                player.currentTime = 0;
-            }
-            function change_vol()
-            {
-                player.volume=document.getElementById("change_vol").value;
-            }
-        </script>
     </ons-page>
 </template>
-
 
 {% endblock %}
