--- a/staticfiles/UserApp/index.css
+++ b/staticfiles/UserApp/index.css
@@ -1,6 +1,6 @@
 body{
     background-color: white;
-    max-width: 428px;
+    max-width: 100%;
     overflow-y: auto;
     text-decoration: none;
 }
