--- a/static/UserApp/index.css
+++ b/static/UserApp/index.css
@@ -1,6 +1,6 @@
 body{
     background-color: white;
-    max-width: 100%;
+    max-width: 550px;
     overflow-y: auto;
     text-decoration: none;
 }
