--- a/templates/Accounts/addtoplaylist.html
+++ b/templates/Accounts/addtoplaylist.html
@@ -13,7 +13,7 @@
             <ons-list-header>Song's</ons-list-header>
             {% for s in songs %}
             <a href="javascript:{}" onclick="document.getElementById('my_form').submit();">
-                <ons-list-item>
+                <ons-list-item ripple>
                     <div class="left">
                         <img class="list-item__thumbnail" src="{% static 'Images/tracks.jpg' %}">
                     </div>
