--- a/templates/Accounts/profile-edit.html
+++ b/templates/Accounts/profile-edit.html
@@ -17,16 +17,16 @@
                 <ons-input name="username" readonly>Username: {{profile.username}}</ons-input>
             </p>
             <p style="margin: 0px 0px 25px 0px;">
-                <ons-input name="first_name" modifier="underbar" placeholder="{{profile.first_name}}" float></ons-input>
+                <ons-input name="first_name" modifier="underbar" float>First Name</ons-input>
             </p>
             <p style="margin: 0px 0px 25px 0px;">
-                <ons-input name="last_name" modifier="underbar"  placeholder="{{profile.last_name}}" float></ons-input>
+                <ons-input name="last_name" modifier="underbar"   float>Last Name</ons-input>
             </p>
             <p style="margin: 0px 0px 25px 0px;">
-                <ons-input name="email" modifier="underbar" placeholder="{{profile.email}}" float></ons-input>
+                <ons-input name="email" modifier="underbar"  float>Email ID</ons-input>
             </p>
             <p style="margin-top: 20px;">
-                <button type="submit">Save</button>
+                <button class="button" type="submit">Save</button>
             </p>
         </div>
     </form>
