--- a/templates/UserApp/albumsongs.html
+++ b/templates/UserApp/albumsongs.html
@@ -17,7 +17,7 @@
             <ons-list-header>Songs</ons-list-header>
             {% for s in songs %}
             <a href="/playsong/{{s.id}}">
-                <ons-list-item>
+                <ons-list-item ripple>
                     <div class="left">
                         <img class="list-item__thumbnail" src="{% static 'Images/tracks.jpg' %}">
                     </div>
