--- a/templates/UserApp/index.html
+++ b/templates/UserApp/index.html
@@ -38,38 +38,38 @@
 
 {% endblock %}
 
+<ons-speed-dial position="bottom right" direction="up">
+  <ons-fab>
+    <ons-icon icon="md-plus"></ons-icon>
+  </ons-fab>
+  <ons-speed-dial-item>
+    <a href="/about">
+      <ons-icon icon="md-info"></ons-icon>
+    </a>
+  </ons-speed-dial-item>
+
+  {% if "uname" in request.session %}
+  <ons-speed-dial-item>
+    <a href="/accounts/logout">
+      <ons-icon ><i class="fas fa-sign-out-alt"></i></ons-icon>
+    </a>
+  </ons-speed-dial-item>
+  {% else %}
+  <ons-speed-dial-item>
+    <a href="/accounts/login">
+      <ons-icon ><i class="fas fa-sign-in-alt"></i></ons-icon>
+    </a>
+  </ons-speed-dial-item>
+  {% endif %}
+
+  <ons-speed-dial-item>
+    <a href="/">
+      <ons-icon icon="md-home"></ons-icon>
+    </a>
+  </ons-speed-dial-item>
+
+</ons-speed-dial>
+
 </body>
 
 </html>
-
-
-
-<!--
-  <ons-navigator swipeable id="myNavigator" page="page1.html"></ons-navigator>
-
-<template id="page1.html"></template>
-  <ons-page id="page1">
-    <ons-toolbar>
-      <div class="center">Page 1</div>
-    </ons-toolbar>
-
-    <p>This is the first page.</p>
-
-    <ons-button id="push-button">Push page</ons-button>
-    <ons-button onclick="ons.notification.alert('Hello World!')">Click Me</ons-button>
-  </ons-page>
-</template>
-
-
-
-<template id="page2.html">
-  <ons-page id="page2">
-    <ons-toolbar>
-      <div class="left"><ons-back-button>Page 1</ons-back-button></div>
-      <div class="center"></div>
-    </ons-toolbar>
-
-    <p>This is the second page.</p>
-  </ons-page>
-</template>
--->
